# Rick-Roll-2.0

./: .replit  pyproject.toml  run.py
app/: __init__.py  views.py
app/static/: style.css
app/templates/: base.html  index.html
